--- a/shared/shared-styles.css
+++ b/shared/shared-styles.css
@@ -236,7 +236,6 @@ hr {
     text-decoration: none !important;
 	color:#fff;
 }
-.dark.overlay a:hover {opacity:.8;}
 .overlay h2 {
     font-size: 1.3rem;
     color: #fff !important;
@@ -327,10 +326,10 @@ hr {
     text-decoration: none;
 }
 .blue.button {
-    background: #00a4e4;
+    background: #0057B8;
 }
 .blue.button:hover {
-    background: #0073ae;
+    background: #002554;
 }
 .orange.button, .contactFlyout {
     background: #e36f1e;
