--- a/shared/shared-styles.css
+++ b/shared/shared-styles.css
@@ -501,7 +501,7 @@ a:hover {
 .textCopy ul li:before, ul.bulleted li:before {
     content: '\2022'; /* Insert content that looks like bullets */
     padding-right: 5px;
-    color: #0073ae;
+    color: #0057B8;
     margin-left: -4px;
 }
 .textCopy ul li {
@@ -643,10 +643,10 @@ a:hover {
     color: inherit;
 }
 .leftRail ul li a:hover {
-    color: #0073ae;
+    color: #0057B8;
 }
 .leftRail ul li.active a{
-	color: #0073ae;
+	color: #0057B8;
 	text-decoration:none;
 	cursor:default;
 }
@@ -1252,7 +1252,7 @@ CTA BUTTONS
 	font-family: "Futura PT", helvetica, arial, sans-serif;
 }
 .CTA_button:hover{background: #a9431E !important;text-decoration:none;}/* (AIG Dark Orange) */
-.CTA_buttonBlue{background: #0073ae !important;}
+.CTA_buttonBlue{background: #0057B8 !important;}
 .CTA_buttonBlue:hover{background: #00a4e4 !important;}
 .CTA_buttonGreen{background: #78a22f !important;}
 .CTA_buttonGreen:hover{background: #95b45b !important;}
