--- a/shared/shared-styles.css
+++ b/shared/shared-styles.css
@@ -950,7 +950,7 @@ html.ltIE10 .showOnOnlyltIE10{display:block;}
 .placeholderTitle{font-weight:bold;}
 .bluebacked .placeholderTitle{color:#fff;}
 
-.button.orange{border:0; font-size: 1.1em;}
+.button.orange{border:0; font-size: 1.1rem;}
 .inlineBlock{display:inline-block;width:auto;}
 .ui-datepicker{font-size: .75rem;}
 .hasError{border:1px solid red !important;}
