--- a/shared/shared-styles.css
+++ b/shared/shared-styles.css
@@ -509,7 +509,7 @@ a:hover {
     color: #0057B8;
     margin-left: -4px;
 }
-.textCopy ul li {
+.textCopy ul li, ul.bulleted li {
     /*list-style-position: inside;*/
     text-indent: -20px;
     margin-left: 18px;
