supported browser notification
updating source files for new supported browser notification/functionality

--- a/shared/css/careington-AIGbranded.css
+++ b/shared/css/careington-AIGbranded.css
@@ -1,3 +1,5 @@
+/* versioning file: /uploads/00001941/careington-AIGbranded_v1.2.css */
+
 @-ms-viewport{width: auto !important;}/*remove IE10/11 scrollbars over page*/
 *{font-family: "Helvetica Neue",Helvetica,Roboto,Arial,sans-serif !important;}
 .container {
