--- a/shared/css/AIGDM_Shared_v1.6b.css
+++ b/shared/css/AIGDM_Shared_v1.6b.css
@@ -1405,6 +1405,7 @@ Main Nav
 	width:100%;
 	z-index:100;
 	margin:0;
+	top:0;
 }
 #navWrap{position:absolute;background:#01a6e4;width:100%;z-index:100;}
 #bodyID.openNav #nav{position:static;}
@@ -1547,3 +1548,24 @@ Messages
 .warningbox ol {color: #a56a10;}
 .warningbox > ol > li{background:transparent url('/uploads/00001941/lidot_warning.png') no-repeat 0 .6em;color: #a56a10;}
 .uiErrorBox > ol > li{background:transparent url('/uploads/00001941/lidot_error.png') no-repeat 0 .6em;color: #D8000C;}
+/************************
+browser compatibility
+************************/
+.browser-error #header {height: auto;}
+.browser-error .browser-error-message{
+	display:block !important;
+	font-size: 1rem;
+	text-align: left;
+	padding: 12px;
+}
+.browser-error-message .messageBox{
+	padding: 12px 12px 12px 60px;
+	margin-bottom: 0;
+	border-radius: 0;
+	background:#FAF9C9 url('/uploads/00001941/error-desktop.png') no-repeat 10px 10px;
+}
+@media screen and (max-width: 767px) {
+	.browser-error .browser-error-message{
+		margin-top: 48px;/*fit under main nav*/
+	}
+}
