supported browser notification
minor change to fix bad code on <label> tag and update list of sites using css/js

--- a/shared/css/shared-styles.css
+++ b/shared/css/shared-styles.css
@@ -533,8 +533,7 @@ a:hover {
 }*/
 
 label {
-    width: 100%;
-    text-align: left;
+    display:block;/*undo bootstrap default*/
     font-weight: normal;
     font-family: 'Futura PT', sans-serif;
 }
