added margin/padding 48px
added margin/padding 48px

--- a/shared/css/shared-styles.css
+++ b/shared/css/shared-styles.css
@@ -1159,27 +1159,35 @@ sub {top: 0.4em;}
 .padTop0{padding-top: 0 !important;}
 .padTop12{padding-top: 12px !important;}
 .padTop24{padding-top: 24px !important;}
+.padTop48{padding-top: 48px !important;}
 .padRight0{padding-right: 0 !important;}
 .padRight12{padding-right: 12px !important;}
 .padRight24{padding-right: 24px !important;}
+.padRight48{padding-right: 48px !important;}
 .padLeft0{padding-left: 0 !important;}
 .padLeft12{padding-left: 12px !important;}
 .padLeft24{padding-left: 24px !important;}
+.padLeft48{padding-left: 48px !important;}
 .padBottom0{padding-bottom: 0 !important;}
 .padBottom12{padding-bottom: 12px !important;}
 .padBottom24{padding-bottom: 24px !important;}
+.padBottom48{padding-bottom: 48px !important;}
 .margin0{margin: 0 !important;}
 .margin12{margin: 12px !important;}
 .margin24{margin: 24px !important;}
+.margin48{margin: 48px !important;}
 .marginLeft0{margin-left: 0 !important;}
 .marginLeft12{margin-left: 12px !important;}
 .marginLeft24{margin-left: 24px !important;}
+.marginLeft48{margin-left: 48px !important;}
 .marginRight0{margin-right: 0 !important;}
 .marginRight12{margin-right: 12px !important;}
 .marginRight24{margin-right: 24px !important;}
+.marginRight48{margin-right: 48px !important;}
 .marginTop0{margin-top: 0 !important;}
 .marginTop12{margin-top: 12px !important;}
 .marginTop24{margin-top: 24px !important;}
+.marginTop48{margin-top: 48px !important;}
 .marginBottom0{margin-bottom: 0 !important;}
 .marginBottom12{margin-bottom: 12px !important;}
 .marginBottom24{margin-bottom: 24px !important;}
