--- a/shared/css/AIGDM_Shared_v1.6b.css
+++ b/shared/css/AIGDM_Shared_v1.6b.css
@@ -610,7 +610,7 @@ sub {top: 0.4em;}
 	top: -200vh;
 	overflow:hidden;
 }
-.isTest .showOnIsTest{/*show test data when specific variable is passed*/
+.ShowVars .showOnIsTest{/*show test data when specific variable is passed*/
 	position: relative;
 	width: auto;
 	height: auto;
